# color-contrast-linter

./: .color_pairs.yml  .gitignore  README.md  RELEASE_NOTES.md  pyproject.toml  setup.py
.github/workflows/: ci.yml  release.yml
src/color_contrast_linter/: cli.py  config.py
src/color_contrast_linter.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
