[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "color-contrast-linter"
version = "0.1.0"
description = "Automated WCAG color contrast linter for accessibility compliance in CI/CD pipelines."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "cm-colors>=0.5.0",
    "click",
    "rich",
    "pyyaml",
]

[project.scripts]
cc-lint = "color_contrast_linter.cli:main"
